--- a/portf-app/src/App.css
+++ b/portf-app/src/App.css
@@ -1,30 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap');
 *{
-    font-family: 'Carattere', cursive;
+   
     font-weight: bolder;
-    font-size: large;
+    font-size: 20px;
 }
 h1, h2, h3 {
     
     font-weight: bolder;
 }
+
 .heading{
     text-align: center;
     text-decoration: underline;
     text-transform: capitalize;
 }
+
 #jumbo{
     align-items: center;
     width: 70%;
     height: 70%;
     margin-left: 30px;
+    
+}
+#jumbo:hover {
+    transform: scale(1.1); 
+    transition: 1s all ease-in-out;
+  }
+
+.head{
+    text-align: center;
+    text-decoration: italic;
 }
 .image{
     height: 500px;
-    width: 80%;
+    width: auto;
+   
     
     
 
 }
 Button{
     box-shadow:0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23);
+}
+.prog{
+    text-align: center;
+}
+.prog p {
+    font-size: 15px;
+    text-decoration: italic;
+   
+}
+Form.Group {
+    box-shadow:0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23);
+}
+
+.color-nav{
+    background: linear-gradient(180deg, #6fb4fd 0%, #0AFFFF 100%);
+}
+
+.font{
+    font-family: 'Cinzel Decorative', cursive;
 }
