--- a/portf-app/src/App.css
+++ b/portf-app/src/App.css
@@ -16,10 +16,11 @@ h1, h2, h3 {
 }
 
 #jumbo{
-    align-items: center;
-    width: 70%;
-    height: 70%;
-    margin-left: 30px;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   
+    
     
 }
 #jumbo:hover {
@@ -27,18 +28,12 @@ h1, h2, h3 {
     transition: 1s all ease-in-out;
   }
 
+
 .head{
     text-align: center;
     text-decoration: italic;
 }
-.image{
-    height: 500px;
-    width: auto;
-   
-    
-    
 
-}
 Button{
     box-shadow:0 10px 20px rgba(0,0,0,0.19),0 6px 6px rgba(0,0,0,0.23);
 }
